[package]
name = "padlock-networking"
version = "0.1.0"
authors = ["Fronkles McFranko <mrelfranko@disroot.org>", "Linden Stark <lindenrstark@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
h2 = "0.3"
http = "0.2"
bytes = "1.0.1"
tokio = { version = "1", features = ["full"] }
futures = "0.3.15"
crossbeam = "0.8.0"

[dev-dependencies]
tokio-test = "*"
