[package]
name = "merkle_tree"
version = "0.1.0"
authors = ["Fronkles McFranko <mrelfranko@disroot.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
serde_support = ["serde"]


[dependencies]
blake2 = "^0.9"
serde = { version = "^1.0", optional = true, features = ["derive"] }
